CI: tests with Java 17