@@ -56,6 +56,7 @@
         </sonar.scala.scapegoat.reportPaths>
         <maven.deploy.skip>true</maven.deploy.skip>
         <scalastyle.skip>true</scalastyle.skip>
+        <jpms.exports/>
     </properties>
 
     <profiles>
@@ -94,6 +95,18 @@
             <properties>
                 <spark.version>3.4.3</spark.version>
                 <spark.compat.version>3.4</spark.compat.version>
+            </properties>
+        </profile>
+        <profile>
+            <id>jdk17</id>
+            <activation>
+                <jdk>[17,)</jdk>
+            </activation>
+            <properties>
+                <jpms.exports>
+                    --add-exports java.base/sun.nio.ch=ALL-UNNAMED
+                    --add-exports java.base/sun.util.calendar=ALL-UNNAMED
+                </jpms.exports>
             </properties>
         </profile>
         <profile>
@@ -341,7 +354,11 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.3.0</version>
                 <configuration>
-                    <argLine>@{argLine} -Duser.timezone=UTC</argLine>
+                    <argLine>
+                        @{argLine}
+                        -Duser.timezone=UTC
+                        ${jpms.exports}
+                    </argLine>
                 </configuration>
             </plugin>
             <plugin>
